Update project with new features

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,9 +10,13 @@
     grid-template-rows: repeat(4, 1fr);
 }
 .footer-icons img{
-    width: 50px;
+    width: 70px;
     margin-left: 20px;
     margin-right: 20px;
+    border: 2px transparent solid;
+    padding: 10px;
+    border-radius: 10px;
+    transition: 0.5s;
 }
 .footer-icons{
     margin-bottom: 30px;
@@ -20,4 +24,17 @@
 .footer-cp{
     color: gray;
     margin-bottom: 30px;
+}
+.links-foot{
+    color: white;
+    text-decoration: none;
+    transition: 0.5s linear all;
+    border-bottom: 2px transparent solid;
+}
+.links-foot:hover{
+    color: red;
+    border-bottom-color: red;
+}
+.footer-icons img:hover{
+    border-color: red;
 }
